--- a/server/static/index.html
+++ b/server/static/index.html
@@ -3,13 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="./css/index.css">
-	<!--<link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">-->
+	<link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
 <title>gpa ReactJS and redux</title>
-<link href="/resources/css/material.orange-indigo.min.css" rel="stylesheet">
-<link href="/resources/css/4/w3.css" rel="stylesheet">
+	<link rel="stylesheet" 
+  href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
+  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script> 
+<!--<link href="/resources/css/material.orange-indigo.min.css" rel="stylesheet">
+<script src="/resources/js/material.min.js"></script>
+<link href="/resources/css/4/w3.css" rel="stylesheet">-->
 <link href="/resources/css/general.css" rel="stylesheet">
 
-<script src="/resources/js/material.min.js"></script>
+
 <link href="/resources/css/font-awesome.min.css" rel="stylesheet">
 	<script defer src="./js/index.compiled_user.js"></script>
 </head>
