--- a/server/static/admin/index.html
+++ b/server/static/admin/index.html
@@ -9,7 +9,7 @@
 <link href="/resources/css/general.css" rel="stylesheet">
 
 <link href="/resources/css/font-awesome.min.css" rel="stylesheet">
-	<script defer src="../js/index.compiled_admin.js"></script>
+	<script defer src="../js/index.compiled_admin_ts.js"></script>
 </head>
 
 <body>
